--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-Trabalhos de Cálculo Numérico no semestre 2016-02
+Todos os testes de Calculo Numérico.
+
+Semestre: 2016-2
+Professor: Pedro Borges.
